--- a/client/src/components/HabitInstance/HabitRangeInstance.scss
+++ b/client/src/components/HabitInstance/HabitRangeInstance.scss
@@ -2,14 +2,13 @@
     display: flex;
     align-items: center;
 
+    padding: 2rem;
+
     gap: 1rem;
 
     &__slider {
         width: 5rem;
-        // .MuiSlider-thumb {
-        //     border-radius: 0;
-        //     color: orangered;
-        // }
+        max-width: 5rem;
 
         &--input {
             width: 3rem;
