--- a/client/src/components/HabitInstance/HabitRangeInstance.scss
+++ b/client/src/components/HabitInstance/HabitRangeInstance.scss
@@ -10,6 +10,39 @@
         width: 5rem;
         max-width: 5rem;
 
+        -webkit-appearance: none;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        &::-webkit-slider-runnable-track {
+            height: 0.2rem;
+            background-color: #ccc;
+        }
+
+        &::-webkit-slider-thumb {
+            -webkit-appearance: none;
+            margin-top: -0.4rem;
+            background-color: deepskyblue;
+            height: 1rem;
+            width: 1rem;
+            border-radius: 50%;
+
+            &:active {
+                background-color: turquoise;
+                transform: scale(1.2);
+
+                &::after {
+                    content: '-';
+                    width: 2rem;
+                    height: 2rem;
+                    border: 10px solid black;
+                }
+            }
+
+        }
+
         &--input {
             width: 3rem;
             outline: none;
