--- a/client/src/components/NewHabit/NewHabit.scss
+++ b/client/src/components/NewHabit/NewHabit.scss
@@ -1,30 +1,90 @@
+$field-width: 15rem;
+
 .NewHabit {
-    padding: 3rem;
-    box-shadow: 0 0 1rem -0.3rem black;
-    border: 1px solid black;
-    
-    margin: 0 auto;
+    color: azure;
 
-    header {
-        font-weight: 500;
-        font-size: 1.4rem;
-        margin-bottom: 0.5rem;
+    box-shadow: 0 0 1rem -0.2rem black;
+    width: max-content;
+    padding: 0;
+    margin: 0;
+    height: max-content;
+
+    display: inline-flex;
+    gap: 0.5rem;
+
+    &__field, &__field--frequency, &__field--date {
+        background-color: #222;
+        display: inline-flex;
+        flex-direction: column;
+
+        width: $field-width;
+        height: 5rem;
+        max-height: 5rem;
+
+        margin: 0;
+
+        box-shadow: 0.5rem 0.5rem 1rem -0.7rem black;
+        padding: 0.25rem 0.75rem;
+
+        .field__group {
+            display: flex;
+            height: 100%;
+            flex-direction: column;
+            justify-content: center;
+        }
+
+        p {
+            margin: 0;
+        }
+
+        label {
+            margin-bottom: 0.2rem;
+            width: max-content;
+            border-bottom: 1px solid deepskyblue;
+        }
     }
 
-    label {
-        display: block;
-        margin-bottom: 0.3rem;
-        font-size: 1.1rem;
-    }
-    
-    input, textarea {
-        width: 8rem;
-    }
-    
-    form {
-        box-shadow:  0 0 0.5rem -0.1rem black;
-        border: 0.05rem solid black;
-        padding: 1rem 2rem;
-    }
+    &__field {
+        &--frequency {
 
+            input {
+                width: 3rem;
+            }
+
+            select {
+                width: 4rem;
+            }
+
+            span {
+                margin: 0 0.3rem;
+            }
+
+            section {
+                height: 100%;
+                align-items: center;
+                display: inline-flex;
+            }
+        }
+
+        &--date {
+            section {
+                display: flex;
+                label {
+                    border: none;
+                    width: 2.5rem;
+                }
+                input[type=date] {
+                    width: 8.5rem;
+                }
+            }
+        }
+
+        select {
+            width: 10rem;
+        }
+
+        input {
+            width: 12rem;
+        }
+    }
 }
