--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,3 +1,9 @@
 * {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+body {
+    padding: none;
+    margin: none;
+    background-color: #202020;
+}
