--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,10 +1,10 @@
-* {
+*, html {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding: 0;
+    margin: 0;
 }
 
 body {
-    padding: none;
-    margin: none;
     background-color: #202020;
     color: azure;
 }
