--- a/client/src/components/Layout/Header.scss
+++ b/client/src/components/Layout/Header.scss
@@ -2,7 +2,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0.5rem 1.5rem;
-    position: absolute;
+    position: sticky;
     top: 0;
     width: 100%;
     background-color: #333;
