--- a/client/src/components/CompactHabit/CompactHabit.scss
+++ b/client/src/components/CompactHabit/CompactHabit.scss
@@ -1,3 +1,5 @@
+@use '../../style/shared/shared';
+
 .CompactHabit {
     display: flex;
     padding: 1rem;
@@ -5,4 +7,12 @@
     margin: 0.8rem 1rem;
     border: 1px solid #333;
     border-radius: 10px 0;
+
+    align-items: center;
+
+    &__name {
+        font-weight: 500;
+        font-size: 1.1rem;
+        padding: 0 1rem;
+    }
 }
