--- a/client/src/components/CompactHabit/CompactHabit.scss
+++ b/client/src/components/CompactHabit/CompactHabit.scss
@@ -1,6 +1,8 @@
 @use '../../style/shared/shared';
 
 .CompactHabit {
+    outline: 1px solid yellow;
+
     display: flex;
     padding: 1rem;
     box-shadow: 0.2rem 0.2rem 1rem 0 black;
