--- a/client/src/components/HabitEntry/DailyEntry.scss
+++ b/client/src/components/HabitEntry/DailyEntry.scss
@@ -1,3 +1,6 @@
 .DailyEntry {
-    outline: 1px solid deeppink
+    outline: 1px solid deeppink;
+
+    display: flex;
+    flex-direction: column;
 }
