(client) Create basic WeeklyEntry timeline svg

--- a/client/src/components/HabitEntry/HabitEntry.scss
+++ b/client/src/components/HabitEntry/HabitEntry.scss
@@ -1,7 +1,7 @@
 $width: 4rem;
 
 .HabitEntry {
-    width: $width;
+    width: max-content;
     display: flex;
     outline: 1px solid deepskyblue;
     justify-content: space-evenly;
