Align HabitEntry width and position with Timescale labels

--- a/client/src/components/CompactHabit/CompactHabit.scss
+++ b/client/src/components/CompactHabit/CompactHabit.scss
@@ -15,13 +15,12 @@
     &__name {
         font-weight: 500;
         font-size: 1.1rem;
-        padding: 0 1rem;
-        width: 3rem;
+        padding: 0rem;
+        width: 5rem;  // match shared.$width - shared.$timeline-entry-margin (horizontal part)
     }
 
     &__list {
         outline: 1px solid forestgreen;
-        padding: 1rem;
 
         display: flex;
         flex-direction: row;
