--- a/client/src/components/Timescale/Timescale.scss
+++ b/client/src/components/Timescale/Timescale.scss
@@ -1,3 +1,5 @@
+@use '../../style/shared/shared';
+
 .Timescale {
     display: flex;
     width: 100%;
@@ -5,9 +7,6 @@
     outline: 1px solid orangered;
 
     @media screen and (min-width: 1280px) {
-        margin: 0 auto;
-        max-width: 60rem;
-        margin-top: 25vh;
         color: azure;
         padding: 1.5rem 2rem;
     }
@@ -17,22 +16,22 @@
         list-style: none;
         padding: 0;
         margin: 0;
+        margin-left: 5rem;
 
         display: flex;
-        justify-content: space-evenly;
+        // justify-content: space-evenly;
 
         &--entry {
-            display: inline-block;
-            width: 5rem;
+            width: shared.$width;
             overflow: hidden;
             text-align: center;
-            font-weight: 500;
-            font-size: 1.2rem;
-            padding: 0.8rem 1rem;
-            margin: 1rem 0;
+            font-size: 1.1rem;
+            padding: 0.5rem 0;
             background-color: #292929;
             user-select: none;
+            border: 1px solid #333;
             box-shadow: 0 0.2rem 0.5rem -0.3rem #111, 0 -0.2rem 0.5rem -0.3rem #111;
+            margin: shared.$timeline-entry-margin;
         }
     }
 
