Add completion PUT route and corresponding mutation hook, and add mutate call to HabitToggleInstance

--- a/client/src/components/HabitInstance/HabitToggleInstance.scss
+++ b/client/src/components/HabitInstance/HabitToggleInstance.scss
@@ -3,6 +3,9 @@
 $width: 1.5rem;
 
 .HabitToggleInstance {
+    background: none;
+    outline: none;
+
     display: inline-flex;
     justify-content: center;
     align-items: center;
