--- a/client/src/components/Timescale/Timescale.scss
+++ b/client/src/components/Timescale/Timescale.scss
@@ -2,14 +2,12 @@
 
 .Timescale {
     display: flex;
-    width: 100%;
+    width: max-content;
     flex-direction: row;
 
-    @media screen and (min-width: 1280px) {
-        color: azure;
-        padding: 0 2rem;
-        margin-top: 1rem;
-    }
+    color: azure;
+    padding: 0 2rem;
+    margin-top: 1rem;
 
     &__list {
         width: 100%;
