Update roadmap.md. Add bits of styling to CompactHabit and HabitRangeInstance

--- a/client/src/components/CompactHabit/CompactHabit.scss
+++ b/client/src/components/CompactHabit/CompactHabit.scss
@@ -7,7 +7,7 @@
     display: flex;
     padding: 1rem;
     box-shadow: 0.2rem 0.2rem 1rem 0 black;
-    margin: 0.8rem 1rem;
+    margin: 0.8rem 0;
     border: 1px solid #333;
     border-radius: 10px 0;
 
