--- a/client/src/components/HabitInstance/HabitRangeInstance.scss
+++ b/client/src/components/HabitInstance/HabitRangeInstance.scss
@@ -2,9 +2,9 @@
     display: flex;
     align-items: center;
 
-    padding: 2rem;
+    flex-direction: column;
 
-    gap: 1rem;
+    gap: 0.5rem;
 
     &__slider {
         width: 5rem;
@@ -17,30 +17,8 @@
         align-items: center;
 
         &::-webkit-slider-runnable-track {
-            height: 0.2rem;
+            height: 0.15rem;
             background-color: #ccc;
-        }
-
-        &::-webkit-slider-thumb {
-            -webkit-appearance: none;
-            margin-top: -0.4rem;
-            background-color: deepskyblue;
-            height: 1rem;
-            width: 1rem;
-            border-radius: 50%;
-
-            &:active {
-                background-color: turquoise;
-                transform: scale(1.2);
-
-                &::after {
-                    content: '-';
-                    width: 2rem;
-                    height: 2rem;
-                    border: 10px solid black;
-                }
-            }
-
         }
 
         &--input {
@@ -50,7 +28,58 @@
             border-bottom: 1px solid skyblue;
         }
     }
+};
 
+.completed, .underway, .incomplete {
+    &::-webkit-slider-thumb {
+        -webkit-appearance: none;
+        margin-top: -0.4rem;
+        background-color: deepskyblue;
+        height: 1rem;
+        width: 1rem;
+        border-radius: 50%;
 
+        transition: all 50ms ease-in;
 
+        &:active {
+            transform: scale(1.2);
+
+            &::after {
+                content: '-';
+                width: 2rem;
+                height: 2rem;
+                border: 10px solid black;
+            }
+        }
+    }
+}
+
+.completed {
+    &::-webkit-slider-thumb {
+        background-color: forestgreen;
+
+        &:active {
+            background-color: green;
+        }
+    }
+}
+
+.underway {
+    &::-webkit-slider-thumb {
+        background-color: yellowgreen;
+
+        &:active {
+            background-color: greenyellow;
+        }
+    }
+}
+
+.incomplete {
+    &::-webkit-slider-thumb {
+        background-color: grey;
+
+        &:active {
+            background-color: slategrey;
+        }
+    }
 }
