Add optional message prop to Login. Style Login form. Update roadmap.md

--- a/client/src/components/Auth/register.module.scss
+++ b/client/src/components/Auth/register.module.scss
@@ -72,4 +72,16 @@
             background-color: #292929;
         }
     }
+
+    &__message {
+        padding: 2rem 1rem;
+        width: max-content;
+        background-color: deepskyblue;
+        color: #282828;
+        font-weight: 500;
+        border-radius: 5px;
+        margin: 0 auto;
+        margin-top: 2rem;
+        transform: translateX((-5%));
+    }
 }
