Only render relevant link buttons in Header. Add specific style to active link

--- a/client/src/components/Layout/header.module.scss
+++ b/client/src/components/Layout/header.module.scss
@@ -9,6 +9,8 @@
         display: inline-block;
         outline: none;
         color: azure;
+        width: 6rem;
+        text-align: center;
         
         padding: 0.5rem 1rem;
         border: 3px solid #444;
