--- a/client/src/components/CompactHabit/CompactHabit.module.scss
+++ b/client/src/components/CompactHabit/CompactHabit.module.scss
@@ -8,20 +8,36 @@
     display: flex;
     justify-content: center;
     background-color: #181818;
-    padding: 1rem;
     border-radius: 50%;
+
+    transition: all 80ms linear;
+
+    &:hover {
+        background-color: #333;
+        border-radius: 5px;
+    }
+}
+
+.Expand, .Close {
+    width: 100%;
+    height: 100%;
+    padding: 0.65rem;
+
+    
+    transition: all 20ms ease-in-out;
+    transform: scale(1.1);
 }
 
 .Expand {
-    width: 100%;
-    height: 100%;
-
-    transition: all 20ms ease-in-out;
-
-    transform: scale(1.1);
-    // transform: rotate(45deg);
+    transform: rotate(45deg);
 
     &:hover {
-        transform: scale(1.3) rotate(45deg);
+        transform: scale(1.3) rotate(-45deg);
     }
+}
+
+.Close {
+    transition: transform 50ms ease-in;
+
+    transform: scale(1.5);
 }
