Make CompactHabit name span wider. Make margin between HabitEntry instances and Timescale labels responsive

--- a/client/src/components/CompactHabit/CompactHabit.scss
+++ b/client/src/components/CompactHabit/CompactHabit.scss
@@ -15,9 +15,9 @@
 
     &__name {
         font-weight: 500;
-        font-size: 1.1rem;
+        font-size: 1rem;
         padding: 0rem;
-        width: 5rem;  // match shared.$width - shared.$timeline-entry-margin (horizontal part)
+        width: shared.$habitNameWidth;  // match shared.$width - shared.$timeline-entry-margin (horizontal part)
     }
 
     &__list {
