--- a/client/src/style/shared/_shared.scss
+++ b/client/src/style/shared/_shared.scss
@@ -2,6 +2,12 @@ $width: 6rem;
 
 $timeline-entry-margin: 0 1rem;
 
+$habitNameWidth: 10rem;
+$habitEntryWidth: 5rem;
+$timelineEntryMarginX: 1rem;
+
+$habitEntryMarginSmall: 0.2rem;
+
 %default-button {
     border: none;
     outline: none;
