--- a/client/src/components/HabitEntry/HabitEntry.scss
+++ b/client/src/components/HabitEntry/HabitEntry.scss
@@ -1,10 +1,17 @@
 @use '../../style/shared/shared';
 
-$width: 4rem;
-
 .HabitEntry {
-    width: shared.$width;
-    margin: shared.$timeline-entry-margin;
+    width: shared.$habitEntryWidth;
+
+    @media screen and (min-width: 1280px) {
+        margin: 0 shared.$timelineEntryMarginX;
+    }
+    margin: 0 shared.$habitEntryMarginSmall;
+
+    &:nth-of-type(1) {
+        margin-left: 1rem;
+    }
+
     display: flex;
     background-color: #1a1a1a;
     justify-content: space-evenly;
