--- a/client/src/components/Timescale/Timescale.scss
+++ b/client/src/components/Timescale/Timescale.scss
@@ -1,55 +1,63 @@
-@use '../../style/shared/shared';
+@use "../../style/shared/shared";
 
 .Timescale {
-    display: flex;
-    width: max-content;
-    flex-direction: row;
+	display: flex;
+	width: max-content;
+	flex-direction: row;
 
-    color: azure;
-    padding: 0 2rem;
-    margin-top: 1rem;
+	color: azure;
+	padding: 0 2rem;
+	margin-top: 1rem;
 
-    &__list {
-        width: 100%;
-        list-style: none;
-        padding: 0;
-        margin: 0;
-        margin-left: 4rem;
+	&__list {
+		width: 100%;
+		list-style: none;
+		padding: 0;
+		margin: 0;
+		margin-left: shared.$habitNameWidth;
 
-        display: flex;
-        // justify-content: space-evenly;
+		display: flex;
+		// justify-content: space-evenly;
 
-        &--entry {
-            width: shared.$width;
-            overflow: hidden;
-            text-align: center;
-            font-size: 1.1rem;
-            padding: 0.5rem 0;
-            background-color: #292929;
-            user-select: none;
-            border: 1px solid #333;
-            box-shadow: 0 0.2rem 0.5rem -0.3rem #111, 0 -0.2rem 0.5rem -0.3rem #111;
-            margin: shared.$timeline-entry-margin;
-        }
-    }
+		&--entry {
+			&:nth-of-type(1) {
+				margin-left: 0;
+			}
 
-    &__cycle {
-        font-size: 0.82rem;
-        width: 4.5rem;
-        max-width: 4.5rem;
-        overflow: hidden;
-        height: 2.2rem;
-        align-self: center;
-        background-color: #222;
-        outline: 0.2rem solid #555;
-        color: azure;
-        border: none;
-        border-radius: 0.5rem;
+			width: shared.$habitEntryWidth;
+			overflow: hidden;
+			text-align: center;
+			font-size: 1.1rem;
+			padding: 0.5rem 0;
+			background-color: #292929;
+			user-select: none;
+			border: 1px solid #333;
+			box-shadow: 0 0.2rem 0.5rem -0.3rem #111, 0 -0.2rem 0.5rem -0.3rem #111;
 
-        &:hover {
-            background-color: #444;
-            box-shadow: 0rem 0rem 0.5rem 0 black, 0 0.15rem 0.5rem -0.2rem black;
-            transform: translateY(-2px);
-        }
-    }
+			@media screen and (min-width: 1280px) {
+				margin: 0 shared.$timelineEntryMarginX;
+			}
+            margin: 0 shared.$habitEntryMarginSmall;
+		}
+	}
+
+	&__cycle {
+		font-size: 0.82rem;
+		width: 4.5rem;
+		max-width: 4.5rem;
+		overflow: hidden;
+		height: 2.2rem;
+		align-self: center;
+		background-color: #222;
+		outline: 0.2rem solid #555;
+		color: azure;
+		border: none;
+		border-radius: 0.5rem;
+
+		&:hover {
+			background-color: #444;
+			box-shadow: 0rem 0rem 0.5rem 0 black, 0 0.15rem 0.5rem -0.2rem black;
+			transform: translateY(-2px);
+		}
+	}
 }
