--- a/client/src/components/NewHabit/NewHabit.module.scss
+++ b/client/src/components/NewHabit/NewHabit.module.scss
@@ -8,7 +8,7 @@ $field-width: 15rem;
 	color: azure;
 
 	box-shadow: 0 0 1rem -0.2rem black;
-	width: max-content;
+	max-width: 100%;
 	padding: 0;
 	margin: 0;
 	height: max-content;
