--- a/client/src/style/shared/_shared.scss
+++ b/client/src/style/shared/_shared.scss
@@ -5,8 +5,9 @@ $timeline-entry-margin: 0 1rem;
 $habitNameWidth: 10rem;
 $habitEntryWidth: 5rem;
 $timelineEntryMarginX: 1rem;
+$compactHabitButtonWidth: 5rem;
 
-$habitEntryMarginSmall: 0.2rem;
+$habitEntryMarginSmall: 0.3rem;
 
 %default-button {
     border: none;
