--- a/client/src/components/CompactHabit/CompactHabit.module.scss
+++ b/client/src/components/CompactHabit/CompactHabit.module.scss
@@ -2,12 +2,17 @@
 
 .Button {
     @extend %default-button;
+    justify-self: center;
+    align-self: center;
+    align-items: center;
+    justify-content: center;
+    max-width: 3rem;
     height: 100%;
     margin: 0 0.8rem;
     display: flex;
     justify-content: center;
     background-color: #181818;
-    border-radius: 50%;
+    border-radius: 10%;
 
     transition: all 80ms linear;
     box-shadow: 0 0 0 0.15rem #333;
@@ -21,11 +26,9 @@
 }
 
 .Expand, .Close {
-    width: 100%;
-    height: 100%;
+    width: 2rem;
+    height: 2rem;
     padding: 0.65rem;
-
-    
     transition: all 20ms ease-in-out;
     transform: scale(1.1);
 }
