--- a/client/src/components/HabitEntry/HabitEntry.scss
+++ b/client/src/components/HabitEntry/HabitEntry.scss
@@ -14,6 +14,7 @@
 
     display: flex;
     background-color: #1a1a1a;
+    border-radius: 5px 0;
     justify-content: space-evenly;
     padding: 0.8rem 0;
 }
