--- a/client/src/components/NewHabit/NewHabit.module.scss
+++ b/client/src/components/NewHabit/NewHabit.module.scss
@@ -1,9 +1,132 @@
+@use "../../style/shared/shared";
+@use '../../style/shared/color';
+
 $field-width: 15rem;
 
-.Label {
-    margin-bottom: 0.2rem;
+.Form {
+	display: flex;
+	flex-direction: row;
+	margin-top: 1rem;
+	gap: 1.3rem;
+	color: #ddd;
+	padding: 0.2rem;
+	background-color: color.$dark;
+	width: max-content;
 }
 
+.Label {
+	position: absolute;
+	top: -15px;
+	left: -12px;
+	box-shadow: 0.6rem 0.6rem 0 -0.4rem color.$dark-tint;
+	background-color: color.$dark;
+	color: azure;
+	padding: 0.3rem 1.5rem;
+	min-width: max-content;
+	width: 90%;
+	display: inline-block;
+	margin-bottom: 0.2rem;
+	font-weight: 500;
+	font-size: 1rem;
+}
+
+.SubLabel {
+    display: inline-block;
+    width: 2rem;
+    font-size: 0.9rem;
+    text-align: right;
+    margin-right: 1rem;
+}
+
+.Section {
+	position: relative;
+	padding: 0.4rem 0.8rem;
+	padding-top: 1.5rem;
+    gap: 0.2rem;
+	box-shadow: 0rem 0.2rem 0.5rem 0 color.$dark;
+	border-radius: 5px;
+	display: flex;
+	flex-direction: column;
+	width: max-content;
+	background-color: color.$main;
+    justify-content: center;
+}
+
+.Field {
+	span {
+		display: inline-flex;
+		margin: 0 0.4rem;
+		font-size: 0.9rem;
+	}
+}
+
+.Input {
+	@extend %shared-input;
+	font-size: 0.78rem;
+	line-height: 0.8rem;
+	width: 12rem;
+
+	&[type="number"] {
+		text-align: center;
+		&::-webkit-outer-spin-button,
+		&::-webkit-inner-spin-button {
+			-webkit-appearance: none;
+		}
+	}
+
+    &[type="date"] {
+        width: 9rem;
+        &::-webkit-calendar-picker-indicator {
+            filter: invert(1);
+        }
+    }
+}
+
+.Select {
+	@extend %shared-input;
+	background-color: color.$main;
+	color: #ddd;
+
+	transition: all 50ms cubic-bezier(0.075, 0.82, 0.165, 1);
+
+	&:hover,
+	&:active,
+	&:focus {
+		border-color: #ccc;
+	}
+}
+
+.Option {
+	background-color: color.$secondary;
+}
+
+.Button {
+    @extend %default-button;
+
+    height: 3rem;
+    font-weight: 500;
+    align-self: center;
+    justify-self: center;
+    margin-right: 1.3rem;
+    background-color: color.$secondary;
+    border-radius: 10px;
+    line-height: 100%;
+    border: 2px solid #555;
+    padding: 1rem 0.9rem;
+    font-size: 0.85rem;
+    color: color.$light;
+
+    transition: all 50ms ease-out;
+
+    &:hover {
+        transform: translateY(-3px);
+        box-shadow: 0 0.5rem 0 -0.4rem deepskyblue;
+        border-color: deepskyblue;
+    }
+
+}
+
+//
 .NewHabit {
 	color: azure;
 
@@ -19,12 +142,12 @@ $field-width: 15rem;
 	&__field,
 	&__field--frequency,
 	&__field--date {
-        justify-self: center;
-        outline: 3px solid greenyellow;
+		justify-self: center;
+		// outline: 3px solid greenyellow;
 		background-color: #222;
 		display: inline-flex;
 		flex-direction: column;
-        height: 7rem;
+		height: 7rem;
 
 		margin: 0;
 
