--- a/client/src/components/Habits/Habits.scss
+++ b/client/src/components/Habits/Habits.scss
@@ -1,7 +1,12 @@
+@use '../../style/shared/color';
+
 .Habits {
     display: flex;
     flex-direction: column;
     width: max-content;
 
-    margin: 0 1rem;
+    margin: 2rem auto;
+    padding: 2rem;
+
+    border: 4px solid color.$secondary;
 }
