--- a/client/src/components/Habits/NewHabitButton/NewHabitButton.scss
+++ b/client/src/components/Habits/NewHabitButton/NewHabitButton.scss
@@ -3,10 +3,11 @@
 .NewHabitButton {
     @extend %default-button;
 
-    align-self: flex-end;
+    align-self: flex-start;
     padding: 1rem 2rem;
     border: 0.2rem solid #333;
     border-radius: 10px;
+    margin-top: 2rem;
 
     transition: all 50ms ease;
 
