--- a/client/src/components/NewHabit/NewHabit.module.scss
+++ b/client/src/components/NewHabit/NewHabit.module.scss
@@ -12,6 +12,16 @@ $field-width: 15rem;
 	padding: 0.2rem;
 	background-color: color.$dark;
 	width: max-content;
+
+    @media screen and (min-width: 1280px) {
+        flex-direction: row;
+        gap: 1.3rem
+    }
+
+    @media screen and (max-width: 1280px) {
+        flex-direction: column;
+        gap: 2rem;
+    }
 }
 
 .Label {
