--- a/client/src/components/Habits/NewHabitButton/NewHabitButton.scss
+++ b/client/src/components/Habits/NewHabitButton/NewHabitButton.scss
@@ -1,19 +1,19 @@
-@use '../../../style/shared/shared';
+@use "../../../style/shared/shared";
 
 .NewHabitButton {
-    @extend %default-button;
+	@extend %default-button;
 
-    align-self: flex-start;
-    padding: 1rem 2rem;
-    border: 0.2rem solid #333;
-    border-radius: 10px;
-    margin-top: 2rem;
+	align-self: flex-start;
+	padding: 1rem 2rem;
+	border: 0.2rem solid #333;
+	border-radius: 10px;
+	margin-top: 2rem;
 
-    transition: all 50ms ease;
+	transition: all 50ms ease;
 
-    &:hover {
-        border-color: #444;
-        box-shadow: 0 0.5rem 0 -0.4rem black;
-        transform: translateY((-2px));
-    }
+	&:hover {
+		border-color: #444;
+		box-shadow: 0 0.5rem 0 -0.4rem black;
+		transform: translateY((-2px));
+	}
 }
