--- a/client/src/components/HabitDetails/HabitDetails.module.scss
+++ b/client/src/components/HabitDetails/HabitDetails.module.scss
@@ -1,4 +1,42 @@
 .HabitDetails {
-    display: block;
+    display: flex;
+    flex-direction: column;
     width: 100%;
+    position: absolute;
+    top: calc(100% - 13px);
+    background-color: #222;
+    right: 4rem;
+    width: max-content;
+    z-index: 100;
+    box-shadow: 1rem 1rem 1rem -0.8rem black;
+    padding: 1rem 2rem;
+    border-radius: 0 0 5px 5px;
+    font-size: 0.93rem;
+    outline: 1px solid #333;
+
+}
+
+.Field {
+    border-left: 2px solid #333;
+    max-width: 30rem;
+    padding-left: 1rem;
+    min-height: 3rem;
+    height: max-content;
+    display: flex;
+    align-items: center;
+
+    &:not(:nth-of-type(1)) {
+        padding-top: 0.8rem;
+    }
+}
+
+.Label {
+    font-weight: 500;
+    min-width: 6rem;
+    display: inline-flex;
+    background-color: #333;
+    border: 1px solid #222;
+    justify-content: flex-end;
+    padding: 0.5rem 1rem;
+    margin-right: 1rem;
 }
