--- a/client/src/components/NewHabit/NewHabit.module.scss
+++ b/client/src/components/NewHabit/NewHabit.module.scss
@@ -1,27 +1,82 @@
 @use "../../style/shared/shared";
-@use '../../style/shared/color';
-
-$field-width: 15rem;
+@use "../../style/shared/color";
 
 .Form {
 	display: flex;
-	flex-direction: row;
+	flex-direction: column;
 	margin-top: 1rem;
-	gap: 1.3rem;
 	color: #ddd;
-	padding: 0.2rem;
-	background-color: color.$dark;
+	padding: 2rem 1rem;
+	// background-color: color.$dark;
+    outline: 2px solid color.$secondary;
+    border-radius: 5px;
 	width: max-content;
 
-    @media screen and (min-width: 1280px) {
-        flex-direction: row;
-        gap: 1.3rem
-    }
+	@media screen and (min-width: 1280px) {
+		gap: 0.5rem;
+	}
 
-    @media screen and (max-width: 1280px) {
-        flex-direction: column;
-        gap: 2rem;
+	@media screen and (max-width: 1280px) {
+		gap: 0rem;
+	}
+}
+
+.Row {
+	display: grid;
+	grid-template-areas:
+		"label"
+		"fields";
+	width: 100%;
+    &:not(:nth-last-of-type(1)) {
+        border-bottom: 2px solid #333;
+        border-width: 4px;
     }
+    padding-bottom: 1rem;
+
+	&__fields {
+		grid-row: fields;
+        gap: 1.5rem;
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+		padding: 0.5rem 2rem;
+	}
+
+	&__label {
+		display: flex;
+		grid-row: label;
+		transform: translateX(-12px);
+		color: white;
+		font-weight: 500;
+		font-size: 1.3rem;
+		padding: 0.8rem 0;
+		padding-left: 1rem;
+		background-color: inherit;
+		width: max-content;
+	}
+}
+
+.Section {
+	position: relative;
+	padding: 0.4rem 0.8rem;
+	padding-top: 1.5rem;
+	gap: 0.2rem;
+	box-shadow: 0rem 0.2rem 0.5rem 0 color.$dark;
+	border-radius: 5px;
+	display: flex;
+	flex-direction: column;
+	// min-width: max-content;
+	width: 18rem;
+	background-color: color.$main;
+	justify-content: center;
+}
+
+.Field {
+	span {
+		display: inline-flex;
+		margin: 0 0.4rem;
+		font-size: 0.9rem;
+	}
 }
 
 .Label {
@@ -41,38 +96,30 @@ $field-width: 15rem;
 }
 
 .SubLabel {
-    display: inline-block;
-    width: 2rem;
-    font-size: 0.9rem;
-    text-align: right;
-    margin-right: 1rem;
+	display: inline-block;
+	width: 2rem;
+	font-size: 0.9rem;
+	text-align: right;
+	margin-right: 1rem;
 }
 
-.Section {
-	position: relative;
-	padding: 0.4rem 0.8rem;
-	padding-top: 1.5rem;
-    gap: 0.2rem;
-	box-shadow: 0rem 0.2rem 0.5rem 0 color.$dark;
-	border-radius: 5px;
-	display: flex;
-	flex-direction: column;
-	width: max-content;
-	background-color: color.$main;
+.Description {
+    display: inline-flex;
+    flex-direction: column;
+    width: 100%;
+    font-size: 0.7rem;
+    height: 100%;
+    // align-items: center;
     justify-content: center;
-}
-
-.Field {
-	span {
-		display: inline-flex;
-		margin: 0 0.4rem;
-		font-size: 0.9rem;
-	}
+    text-indent: 0.5rem;
+    color: #bbb;
 }
 
 .Input {
 	@extend %shared-input;
-	font-size: 0.78rem;
+    @extend %outline-active;
+
+    font-size: 0.78rem;
 	line-height: 0.8rem;
 	width: 12rem;
 
@@ -84,26 +131,23 @@ $field-width: 15rem;
 		}
 	}
 
-    &[type="date"] {
-        width: 9rem;
-        &::-webkit-calendar-picker-indicator {
-            filter: invert(1);
-        }
-    }
+	&[type="date"] {
+		width: 9rem;
+		&::-webkit-calendar-picker-indicator {
+			filter: invert(1);
+		}
+	}
 }
 
 .Select {
 	@extend %shared-input;
+    @extend %outline-active;
 	background-color: color.$main;
 	color: #ddd;
 
 	transition: all 50ms cubic-bezier(0.075, 0.82, 0.165, 1);
 
-	&:hover,
-	&:active,
-	&:focus {
-		border-color: #ccc;
-	}
+	max-width: 6rem;
 }
 
 .Option {
@@ -111,107 +155,27 @@ $field-width: 15rem;
 }
 
 .Button {
-    @extend %default-button;
+	@extend %default-button;
+    @extend %outline-active;
 
-    height: 3rem;
-    font-weight: 500;
-    align-self: center;
-    justify-self: center;
-    margin-right: 1.3rem;
-    background-color: color.$secondary;
-    border-radius: 10px;
-    line-height: 100%;
-    border: 2px solid #555;
-    padding: 1rem 0.9rem;
-    font-size: 0.85rem;
-    color: color.$light;
+	height: 3rem;
+	font-weight: 500;
+	align-self: center;
+	justify-self: center;
+	margin-right: 1.3rem;
+	background-color: color.$secondary;
+	border-radius: 10px;
+	line-height: 100%;
+	border: 2px solid #555;
+	padding: 1rem 0.9rem;
+	font-size: 0.85rem;
+	color: color.$light;
 
-    transition: all 50ms ease-out;
+	transition: all 50ms ease-out;
 
-    &:hover {
-        transform: translateY(-3px);
-        box-shadow: 0 0.5rem 0 -0.4rem deepskyblue;
-        border-color: deepskyblue;
-    }
-
-}
-
-//
-.NewHabit {
-	color: azure;
-
-	box-shadow: 0 0 1rem -0.2rem black;
-	max-width: 100%;
-	padding: 0;
-	margin: 0;
-	height: max-content;
-
-	display: inline-flex;
-	gap: 0.5rem;
-
-	&__field,
-	&__field--frequency,
-	&__field--date {
-		justify-self: center;
-		// outline: 3px solid greenyellow;
-		background-color: #222;
-		display: inline-flex;
-		flex-direction: column;
-		height: 7rem;
-
-		margin: 0;
-
-		box-shadow: 0.5rem 0.5rem 1rem -0.7rem black;
-		padding: 0.25rem 0.75rem;
-	}
-
-	&__field {
-		&--group {
-			display: flex;
-			flex-direction: column;
-			justify-content: center;
-
-			outline: 2px solid red;
-		}
-		&--frequency {
-			input {
-				width: 2.5rem;
-			}
-
-			select {
-				width: 4rem;
-			}
-
-			span {
-				margin: 0 0.3rem;
-			}
-
-			section {
-				height: 100%;
-				align-items: center;
-				display: inline-flex;
-			}
-		}
-
-		&--date {
-			section {
-				display: flex;
-				label {
-					border: none;
-					width: 2.5rem;
-				}
-				input[type="date"] {
-					width: 8.5rem;
-				}
-			}
-		}
-
-		select {
-			width: 10rem;
-		}
-
-		input {
-			width: 12rem;
-		}
+	&:hover {
+		transform: translateY(-3px);
+		box-shadow: 0 0.5rem 0 -0.4rem deepskyblue;
+		border-color: deepskyblue;
 	}
 }
