--- a/client/src/components/HabitDetails/HabitDetails.module.scss
+++ b/client/src/components/HabitDetails/HabitDetails.module.scss
@@ -1,33 +1,52 @@
+@use '../../style/shared/shared';
+
+.Wrapper {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: 9;
+    background-color: rgba(#111, 0.65);
+}
+
 .HabitDetails {
     display: flex;
     flex-direction: column;
     width: 100%;
-    position: absolute;
-    top: calc(100% - 13px);
-    background-color: #222;
-    right: 4rem;
-    width: max-content;
-    z-index: 100;
-    box-shadow: 1rem 1rem 1rem -0.8rem black;
+    z-index: 10;
+    position: fixed;
+    
+    top: 20vh;
+    background-color: #212121;
+    width: 40rem;
+    right: calc(50% - 20rem);
+    // z-index: 100;
+    box-shadow: 0 0 3rem -0.5rem black;
     padding: 1rem 2rem;
+    padding-top: 0;
+    padding-left: 0;
     border-radius: 0 0 5px 5px;
     font-size: 0.93rem;
-    outline: 1px solid #333;
 
 }
 
 .Field {
-    border-left: 2px solid #333;
+    border-left: 4px solid #333;
     max-width: 30rem;
-    padding-left: 1rem;
-    min-height: 3rem;
-    height: max-content;
+    padding: 0.2rem 0;
+    padding-left: -0.2rem;
+    height: 3rem;
     display: flex;
     align-items: center;
 
-    &:not(:nth-of-type(1)) {
-        padding-top: 0.8rem;
+    &:nth-of-type(1) {
+        margin-top: 1rem;
     }
+
+    // &:nth-last-of-type(1) {
+    //     padding-bottom: 1rem;
+    // }
 }
 
 .Label {
@@ -35,8 +54,22 @@
     min-width: 6rem;
     display: inline-flex;
     background-color: #333;
-    border: 1px solid #222;
+    // border: 1px solid #222;
     justify-content: flex-end;
     padding: 0.5rem 1rem;
+    margin-left: -0.2rem;
     margin-right: 1rem;
+}
+
+.Delete {
+    @extend %default-button;
+    position: absolute;
+    display: inline-flex;
+    width: max-content;
+    bottom: 1rem;
+    right: 1rem;
+    padding: 0.8rem 1.4rem;
+    border: 2px solid orangered;
+    margin-top: 1rem;
+    border-radius: 2px;
 }
