--- a/client/src/components/HabitDetails/HabitDetails.module.scss
+++ b/client/src/components/HabitDetails/HabitDetails.module.scss
@@ -1,4 +1,5 @@
 @use '../../style/shared/shared';
+@use '../../style/shared/color';
 
 .Wrapper {
     position: fixed;
@@ -20,12 +21,13 @@
     background-color: #212121;
     width: 40rem;
     right: calc(50% - 20rem);
-    box-shadow: 0 0 3rem -0.5rem black;
+    box-shadow: 0 0 3rem -0.5rem black, 0 0 0 0.3rem #444;
     padding: 1rem 2rem;
     padding-top: 0;
     padding-left: 0;
-    border-radius: 0 0 5px 5px;
     font-size: 0.93rem;
+    border-radius: 10px;
+    padding: 2rem 0;
 }
 
 .Header {
@@ -44,7 +46,7 @@
 
 .Field {
     border-left: 4px solid #333;
-    max-width: 30rem;
+    max-width: 100%;
     padding: 0.2rem 0;
     padding-left: -0.2rem;
     height: 3rem;
