--- a/client/src/components/HabitInstance/HabitToggleInstance.scss
+++ b/client/src/components/HabitInstance/HabitToggleInstance.scss
@@ -1,20 +1,38 @@
-@use '../../style/shared/shared';
+@use "../../style/shared/shared";
 
 $width: 1.5rem;
 
 .HabitToggleInstance {
-    background: none;
-    outline: none;
+	background: none;
+	outline: none;
 
-    display: inline-flex;
+	display: inline-flex;
+	min-width: $width;
     justify-content: center;
     align-items: center;
-    min-width: $width;
-    width: $width;
-    height: $width;
-    margin: 0.2rem 0.5rem;
-    user-select: none;
+    line-height: 100%;
+	width: $width;
+	height: $width;
+	margin: 0.2rem 0.5rem;
+	user-select: none;
 
-    border: 1px solid #333;
-    border-radius: 50%;
+	border: 1px solid #333;
+	border-radius: 50%;
+
+    transition: all 100ms ease-out;
+
+    &:hover {
+        outline: 2px solid #444;
+    }
+
+    &:focus, &:active {
+        outline: 3px solid azure;
+    }
+
+	&__button {
+        transition: all 100ms linear;
+		&:hover {
+            fill: #777 !important;
+		}
+	}
 }
