--- a/client/src/components/HabitInstance/HabitToggleInstance.scss
+++ b/client/src/components/HabitInstance/HabitToggleInstance.scss
@@ -25,7 +25,7 @@ $width: 1.5rem;
         outline: 2px solid #444;
     }
 
-    &:focus, &:active {
+    &:focus {
         outline: 3px solid azure;
     }
 
