--- a/client/src/components/HabitEntry/HabitEntry.scss
+++ b/client/src/components/HabitEntry/HabitEntry.scss
@@ -1,4 +1,4 @@
-@use '../../style/shared/shared';
+@use "../../style/shared/shared";
 
 .HabitEntry {
     width: shared.$habitEntryWidth;
@@ -22,6 +22,7 @@
 .__weekly {
     $color-main: #444;
     $color-secondary: #555;
-    box-shadow: 0.5rem 0.5rem 0 -0.4rem $color-main, -0.5rem -0.5rem 0 -0.4rem $color-secondary, 0 0 0.5rem black;
+    box-shadow: 0.5rem 0.5rem 0 -0.4rem $color-main,
+        -0.5rem -0.5rem 0 -0.4rem $color-secondary, 0 0 0.5rem black;
     border-radius: 0;
 }
