(style) change Header to position fixed instead of sticky. Change various bits of styling throughout project

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,3 +1,7 @@
 .App {
     transition: background-color 150ms ease-out, color 100ms ease-out;
+
+    display: block;
+    margin-top: 5rem;
+    width: 100vw;
 }
