--- a/client/src/components/Home/Home.module.scss
+++ b/client/src/components/Home/Home.module.scss
@@ -6,15 +6,15 @@
         max-width: 60rem;
     }
 
-	border-radius: 20px;
-	padding: 2rem;
+    border-radius: 20px;
+    padding: 0 2rem;
 }
 
 .Section {
-	background-color: #151515;
-	padding: 1.5rem 2rem;
-	margin: 1rem 0;
-	box-shadow: 0 0 0.2rem 0 black, 1.5rem 1.5rem 0 -1.3rem deepskyblue;
+    background-color: #151515;
+    padding: 1.5rem 2rem;
+    margin: 1rem 0;
+    box-shadow: 0 0 0.2rem 0 black, 1.5rem 1.5rem 0 -1.3rem deepskyblue;
     font-size: 0.92rem;
 }
 
