--- a/client/src/components/CompactHabit/CompactHabit.module.scss
+++ b/client/src/components/CompactHabit/CompactHabit.module.scss
@@ -1,30 +1,39 @@
 @use "../../style/shared/shared";
+@use "../../style/shared/color";
 
 .CompactHabit {
-	outline: 1px solid #222;
-	width: max-content;
-	display: flex;
-	padding: 0.5rem 1rem;
-	box-shadow: 0.2rem 0.2rem 1rem 0 black;
-	border: 1px solid #333;
-	border-radius: 2px;
-	align-items: center;
+    outline: 1px solid #222;
+    width: max-content;
+    display: flex;
+    padding: 0.8rem 1rem;
+    box-shadow: 0.2rem 0.2rem 1rem 0 black;
+    border: 1px solid #333;
+    border-radius: 2px;
+    height: max-content;
+    background-color: #1e1e1e;
+    align-items: center;
 
-	&:nth-of-type(1) {
-		margin-top: 1rem;
-	}
+    &:nth-of-type(1) {
+        margin-top: 1rem;
+    }
 }
 
 .NameField {
-	font-weight: 500;
-	display: block;
-	font-size: 1rem;
-	width: shared.$habitNameWidth; // match shared.$width - shared.$timeline-entry-margin (horizontal part)
+    display: flex;
+    font-weight: 500;
+    min-height: 3rem;
+    background-color: color.$dark-tint;
+    border-radius: 5px;
+    align-items: center;
+    padding-left: 1rem;
+    font-size: 1rem;
+    width: shared.$habitNameWidth; // match shared.$width - shared.$timeline-entry-margin (horizontal part)
 
-	span {
-		display: inline-block;
-		width: shared.$habitNameWidth;
-	}
+    span {
+        display: inline-flex;
+        width: shared.$habitNameWidth;
+        height: 100%;
+    }
 }
 
 .List {
@@ -33,47 +42,47 @@
 }
 
 .Button {
-	@extend %default-button;
-	justify-self: center;
-	align-self: center;
-	align-items: center;
-	justify-content: center;
-	max-width: 3rem;
-	height: 100%;
-	margin: 0 0.8rem;
-	display: flex;
-	justify-content: center;
-	background-color: #181818;
-	border-radius: 10%;
-	box-shadow: 0 0 0 0.15rem #333;
+    @extend %default-button;
+    justify-self: center;
+    align-self: center;
+    align-items: center;
+    justify-content: center;
+    max-width: 3rem;
+    height: 100%;
+    margin: 0 0.8rem;
+    display: flex;
+    justify-content: center;
+    background-color: #181818;
+    border-radius: 10%;
+    box-shadow: 0 0 0 0.15rem #333;
 
-	transition: all 80ms linear;
+    transition: all 80ms linear;
 
-	&:hover {
-		background-color: #333;
-		border-radius: 5px;
-	}
+    &:hover {
+        background-color: #333;
+        border-radius: 5px;
+    }
 }
 
 .Expand,
 .Close {
-	width: 2rem;
-	height: 2rem;
-	padding: 0.65rem;
-	transition: all 20ms ease-in-out;
-	transform: scale(1.1);
+    width: 2rem;
+    height: 2rem;
+    padding: 0.65rem;
+    transition: all 20ms ease-in-out;
+    transform: scale(1.1);
 }
 
 .Expand {
-	transform: rotate(45deg);
+    transform: rotate(45deg);
 
-	&:hover {
-		transform: rotate(-45deg);
-	}
+    &:hover {
+        transform: rotate(-45deg);
+    }
 }
 
 .Close {
-	transition: transform 50ms ease-in;
+    transition: transform 50ms ease-in;
 
-	transform: scale(1.5);
+    transform: scale(1.5);
 }
