--- a/client/src/components/Habits/Habits.module.scss
+++ b/client/src/components/Habits/Habits.module.scss
@@ -5,6 +5,6 @@
     flex-direction: column;
     width: max-content;
 
-    margin: 2rem auto;
-    padding: 2rem;
+    margin: 0 auto;
+    padding: 0 2rem;
 }
