--- a/client/src/components/Layout/header.module.scss
+++ b/client/src/components/Layout/header.module.scss
@@ -1,3 +1,5 @@
+@use "../../style/shared/color";
+
 .Buttons {
     display: flex;
     flex-direction: row;
@@ -11,33 +13,32 @@
         color: azure;
         width: 6rem;
         text-align: center;
-        
+
         padding: 0.5rem 1rem;
-        border: 3px solid #444;
+        border: 2px solid deepskyblue;
         background-color: #222;
-        border-radius: 5px;
-        
+        border-radius: 3px;
+
         transition: all 100ms ease-in-out;
-        
+
         &:hover {
             background-color: #333;
         }
     }
-
 }
 
 .Header {
-    box-sizing: border-box;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 
     margin: 0;
     padding: 0 1.5rem;
-    position: sticky;
+    position: fixed;
+    z-index: 100;
     top: 0;
     width: 100%;
-    background-color: #333;
+    background-color: color.$dark;
     box-shadow: 0 0.3rem 1rem 0 black;
 
     &__logo {
