--- a/client/src/components/NewHabit/NewHabit.module.scss
+++ b/client/src/components/NewHabit/NewHabit.module.scss
@@ -2,104 +2,102 @@
 @use "../../style/shared/color";
 
 .Form {
-	display: flex;
-	flex-direction: column;
+    display: flex;
+    flex-direction: column;
     margin: 0 auto;
-	margin-top: 1rem;
-	color: #ddd;
-	padding: 2rem 1rem;
-    outline: 2px solid color.$secondary;
+    color: #ddd;
+    padding: 0 2rem;
     border-radius: 5px;
-	width: max-content;
+    width: max-content;
 
-	@media screen and (min-width: 1280px) {
-		gap: 0.5rem;
-	}
+    @media screen and (min-width: 1280px) {
+        gap: 0.5rem;
+    }
 
-	@media screen and (max-width: 1280px) {
-		gap: 0rem;
-	}
+    @media screen and (max-width: 1280px) {
+        gap: 0rem;
+    }
 }
 
 .Row {
-	display: grid;
-	grid-template-areas:
-		"label"
-		"fields";
-	width: 100%;
+    display: grid;
+    grid-template-areas:
+        "label"
+        "fields";
+    width: 100%;
     &:not(:nth-last-of-type(1)) {
         border-bottom: 2px solid #333;
         border-width: 4px;
     }
     padding-bottom: 1rem;
 
-	&__fields {
-		grid-row: fields;
+    &__fields {
+        grid-row: fields;
         gap: 1.5rem;
-		display: flex;
-		flex-direction: row;
-		justify-content: space-between;
-		padding: 0.5rem 2rem;
-	}
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        padding: 0.5rem 2rem;
+    }
 
-	&__label {
-		display: flex;
-		grid-row: label;
-		transform: translateX(-12px);
-		color: white;
-		font-weight: 500;
-		font-size: 1.3rem;
-		padding: 0.8rem 0;
-		padding-left: 1rem;
-		background-color: inherit;
-		width: max-content;
-	}
+    &__label {
+        display: flex;
+        grid-row: label;
+        transform: translateX(-12px);
+        color: white;
+        font-weight: 500;
+        font-size: 1.3rem;
+        padding: 0.8rem 0;
+        padding-left: 1rem;
+        background-color: inherit;
+        width: max-content;
+    }
 }
 
 .Section {
-	position: relative;
-	padding: 0.4rem 0.8rem;
-	padding-top: 1.5rem;
-	gap: 0.2rem;
-	box-shadow: 0rem 0.2rem 0.5rem 0 color.$dark;
-	border-radius: 5px;
-	display: flex;
-	flex-direction: column;
-	width: 18rem;
-	background-color: color.$main;
-	justify-content: center;
+    position: relative;
+    padding: 0.4rem 0.8rem;
+    padding-top: 1.5rem;
+    gap: 0.2rem;
+    box-shadow: 0rem 0.2rem 0.5rem 0 color.$dark;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    width: 18rem;
+    background-color: color.$main;
+    justify-content: center;
 }
 
 .Field {
-	span {
-		display: inline-flex;
-		margin: 0 0.4rem;
-		font-size: 0.9rem;
-	}
+    span {
+        display: inline-flex;
+        margin: 0 0.4rem;
+        font-size: 0.9rem;
+    }
 }
 
 .Label {
-	position: absolute;
-	top: -15px;
-	left: -12px;
-	box-shadow: 0.6rem 0.6rem 0 -0.4rem color.$dark-tint;
-	background-color: color.$dark;
-	color: azure;
-	padding: 0.3rem 1.5rem;
-	min-width: max-content;
-	width: 90%;
-	display: inline-block;
-	margin-bottom: 0.2rem;
-	font-weight: 500;
-	font-size: 1rem;
+    position: absolute;
+    top: -15px;
+    left: -12px;
+    box-shadow: 0.6rem 0.6rem 0 -0.4rem color.$dark-tint;
+    background-color: color.$dark;
+    color: azure;
+    padding: 0.3rem 1.5rem;
+    min-width: max-content;
+    width: 90%;
+    display: inline-block;
+    margin-bottom: 0.2rem;
+    font-weight: 500;
+    font-size: 1rem;
 }
 
 .SubLabel {
-	display: inline-block;
-	width: 2rem;
-	font-size: 0.9rem;
-	text-align: right;
-	margin-right: 1rem;
+    display: inline-block;
+    width: 2rem;
+    font-size: 0.9rem;
+    text-align: right;
+    margin-right: 1rem;
 }
 
 .Description {
@@ -115,66 +113,66 @@
 }
 
 .Input {
-	@extend %shared-input;
+    @extend %shared-input;
     @extend %outline-active;
 
     font-size: 0.78rem;
-	line-height: 0.8rem;
-	width: 12rem;
+    line-height: 0.8rem;
+    width: 12rem;
 
-	&[type="number"] {
-		text-align: center;
-		&::-webkit-outer-spin-button,
-		&::-webkit-inner-spin-button {
-			-webkit-appearance: none;
-		}
-	}
+    &[type="number"] {
+        text-align: center;
+        &::-webkit-outer-spin-button,
+        &::-webkit-inner-spin-button {
+            -webkit-appearance: none;
+        }
+    }
 
-	&[type="date"] {
-		width: 9rem;
-		&::-webkit-calendar-picker-indicator {
-			filter: invert(1);
-		}
-	}
+    &[type="date"] {
+        width: 9rem;
+        &::-webkit-calendar-picker-indicator {
+            filter: invert(1);
+        }
+    }
 }
 
 .Select {
-	@extend %shared-input;
+    @extend %shared-input;
     @extend %outline-active;
-	background-color: color.$main;
-	color: #ddd;
+    background-color: color.$main;
+    color: #ddd;
 
-	transition: all 50ms cubic-bezier(0.075, 0.82, 0.165, 1);
+    transition: all 50ms cubic-bezier(0.075, 0.82, 0.165, 1);
 
-	max-width: 6rem;
+    max-width: 6rem;
 }
 
 .Option {
-	background-color: color.$secondary;
+    background-color: color.$secondary;
 }
 
 .Button {
-	@extend %default-button;
+    @extend %default-button;
     @extend %outline-active;
 
-	height: 3rem;
-	font-weight: 500;
-	align-self: center;
-	justify-self: center;
-	margin-right: 1.3rem;
-	background-color: color.$secondary;
-	border-radius: 10px;
-	line-height: 100%;
-	border: 2px solid #555;
-	padding: 1rem 0.9rem;
-	font-size: 0.85rem;
-	color: color.$light;
+    height: 3rem;
+    font-weight: 500;
+    align-self: center;
+    justify-self: center;
+    margin-right: 1.3rem;
+    background-color: color.$secondary;
+    border-radius: 10px;
+    line-height: 100%;
+    border: 2px solid #555;
+    padding: 1rem 0.9rem;
+    font-size: 0.85rem;
+    color: color.$light;
 
-	transition: all 50ms ease-out;
+    transition: all 50ms ease-out;
 
-	&:hover {
-		transform: translateY(-3px);
-		box-shadow: 0 0.5rem 0 -0.4rem deepskyblue;
-		border-color: deepskyblue;
-	}
+    &:hover {
+        transform: translateY(-3px);
+        box-shadow: 0 0.5rem 0 -0.4rem deepskyblue;
+        border-color: deepskyblue;
+    }
 }
