--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,5 +1,7 @@
-*, html {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+*,
+html {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu,
+        Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
     padding: 0;
     margin: 0;
     box-sizing: border-box;
@@ -10,4 +12,8 @@
 body {
     background-color: #202020;
     color: azure;
+}
+
+#root {
+    width: 100vw;
 }
