--- a/client/src/components/Timescale/Timescale.scss
+++ b/client/src/components/Timescale/Timescale.scss
@@ -7,14 +7,14 @@
     flex-direction: row;
 
     color: azure;
-    padding: 0 2rem;
+    padding: 0 2rem; // match padding of CompactHabit
 
     &__list {
         width: 100%;
         list-style: none;
         padding: 0;
         margin: 0;
-        margin-left: shared.$habitNameWidth;
+        // margin-left: shared.$habitNameWidth;
 
         display: flex;
         // justify-content: space-evenly;
@@ -47,28 +47,6 @@
                 margin: 0 shared.$timelineEntryMarginX;
             }
             margin: 0 shared.$habitEntryMarginSmall;
-        }
-    }
-
-    &__cycle {
-        font-size: 0.82rem;
-        width: shared.$compactHabitButtonWidth;
-        max-width: 4.5rem;
-        overflow: hidden;
-        height: 2.2rem;
-        align-self: center;
-        background-color: #111;
-        outline: 4px solid #444;
-        font-size: 0.7rem;
-        color: azure;
-        border: none;
-        border-radius: 3%;
-        box-shadow: 0 0.3rem 0 0 #666, 0 -0.3rem 0 0 #666;
-
-        transition: all 50ms ease-in;
-
-        &:hover {
-            background-color: #333;
         }
     }
 }
